checkbox alignment fix

--- a/assets/css/components.less
+++ b/assets/css/components.less
@@ -570,3 +570,6 @@ span.from-title{
 canvas#myVacation{
     position:relative; z-index:1;
 }
+input[type=checkbox]{
+    width:auto !important;
+}
